# ComfyUI-ControlNeXt-SVD

./: README.md  nodes.py  pyproject.toml  requirements.txt
examples/: controlnext_svd_comfy_01.json  controlnext_svd_diffusers_01.json  example_diffusers.json
pipeline/: pipeline_stable_video_diffusion_controlnext.py
